@@ -1,5 +1,6 @@
 @echo off
 set PYTHONPATH=.\clang
+python generate_config.py > ../lib/config.rb
 python generate_raylib.py > ../lib/raylib_main.rb
 python generate_raymath.py > ../lib/raymath.rb
 python generate_rlgl.py > ../lib/rlgl.rb
