@@ -2300,7 +2300,7 @@
     },
     {
       "name": "GamepadAxis",
-      "description": "Gamepad axis",
+      "description": "Gamepad axes",
       "values": [
         {
           "name": "GAMEPAD_AXIS_LEFT_X",
@@ -3139,7 +3139,7 @@
           "name": "fileName"
         },
         {
-          "type": "char *",
+          "type": "const char *",
           "name": "text"
         }
       ]
@@ -4409,7 +4409,7 @@
           "name": "fileName"
         },
         {
-          "type": "char *",
+          "type": "const char *",
           "name": "text"
         }
       ]
@@ -4684,7 +4684,7 @@
     },
     {
       "name": "EncodeDataBase64",
-      "description": "Encode data to Base64 string, memory must be MemFree()",
+      "description": "Encode data to Base64 string (includes NULL terminator), memory must be MemFree()",
       "returnType": "char *",
       "params": [
         {
@@ -4703,12 +4703,12 @@
     },
     {
       "name": "DecodeDataBase64",
-      "description": "Decode Base64 string data, memory must be MemFree()",
+      "description": "Decode Base64 string (expected NULL terminated), memory must be MemFree()",
       "returnType": "unsigned char *",
       "params": [
         {
-          "type": "const unsigned char *",
-          "name": "data"
+          "type": "const char *",
+          "name": "text"
         },
         {
           "type": "int *",
@@ -5017,7 +5017,7 @@
     },
     {
       "name": "GetGamepadAxisCount",
-      "description": "Get gamepad axis count for a gamepad",
+      "description": "Get axis count for a gamepad",
       "returnType": "int",
       "params": [
         {
@@ -5028,7 +5028,7 @@
     },
     {
       "name": "GetGamepadAxisMovement",
-      "description": "Get axis movement value for a gamepad axis",
+      "description": "Get movement value for a gamepad axis",
       "returnType": "float",
       "params": [
         {
@@ -5703,6 +5703,29 @@
       ]
     },
     {
+      "name": "DrawEllipseV",
+      "description": "Draw ellipse (Vector version)",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "Vector2",
+          "name": "center"
+        },
+        {
+          "type": "float",
+          "name": "radiusH"
+        },
+        {
+          "type": "float",
+          "name": "radiusV"
+        },
+        {
+          "type": "Color",
+          "name": "color"
+        }
+      ]
+    },
+    {
       "name": "DrawEllipseLines",
       "description": "Draw ellipse outline",
       "returnType": "void",
@@ -5714,6 +5737,29 @@
         {
           "type": "int",
           "name": "centerY"
+        },
+        {
+          "type": "float",
+          "name": "radiusH"
+        },
+        {
+          "type": "float",
+          "name": "radiusV"
+        },
+        {
+          "type": "Color",
+          "name": "color"
+        }
+      ]
+    },
+    {
+      "name": "DrawEllipseLinesV",
+      "description": "Draw ellipse outline (Vector version)",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "Vector2",
+          "name": "center"
         },
         {
           "type": "float",
@@ -5964,11 +6010,11 @@
         },
         {
           "type": "Color",
-          "name": "topRight"
+          "name": "bottomRight"
         },
         {
           "type": "Color",
-          "name": "bottomRight"
+          "name": "topRight"
         }
       ]
     },
@@ -8256,7 +8302,7 @@
           "name": "dst"
         },
         {
-          "type": "Vector2 *",
+          "type": "const Vector2 *",
           "name": "points"
         },
         {
@@ -8279,7 +8325,7 @@
           "name": "dst"
         },
         {
-          "type": "Vector2 *",
+          "type": "const Vector2 *",
           "name": "points"
         },
         {
