@@ -179,7 +179,7 @@
     , "MAX_KEYBOARD_KEYS" : "512"
     , "MAX_MOUSE_BUTTONS" : "8"
     , "MAX_GAMEPADS" : "4"
-    , "MAX_GAMEPAD_AXIS" : "8"
+    , "MAX_GAMEPAD_AXES" : "8"
     , "MAX_GAMEPAD_BUTTONS" : "32"
     , "MAX_GAMEPAD_VIBRATION_TIME" : "2.0"
     , "MAX_TOUCH_POINTS" : "8"
