@@ -1,0 +1,2 @@
+@echo off
+for %%f in (lib\*.rb) do @ruby -c %%f
